--- a/wedding/templates/wedding/table_finder.html
+++ b/wedding/templates/wedding/table_finder.html
@@ -499,7 +499,7 @@
                     <div class="col-md-6">
                         <div class="legend-item">
                             <div class="legend-color normal"></div>
-                            <span>Stół okrągły (kliknij aby zobaczyć szczegóły)</span>
+                            <span>Stół okrągły</span>
                         </div>
                         <div class="legend-item">
                             <div class="legend-color normal rectangular"></div>
@@ -520,7 +520,7 @@
                         </div>
                         {% endif %}
                         <div class="legend-item">
-                            <div style="width: 20px; height: 20px; background: #b8a082; border-radius: 50%; margin-right: 15px;"></div>
+                            <div style="width: 20px; height: 20px; background:rgb(122, 96, 64); border-radius: 50%; margin-right: 15px;"></div>
                             <span>Avatar gościa</span>
                         </div>
                     </div>
